# MultiShip

./: .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md
CMake/: automate-vcpkg.cmake
_test/: foundation.multiship  foundation_spoiler.txt
docs/: multiship-generator-foundation.md  multiship-honored-settings.md  multiship-settings.md  multiship-wire-v3.md
rando-logic/: extract_logic.py  gen_metadata.py  gen_settings.py  logic_compiler.py  multiship_logic.json  rando_logic.html
src/: CuratedSettings.cpp  CuratedSettings.h  IceTrap.cpp  IceTrap.h  Server.cpp  Server.h  main.cpp  main_cli.cpp
src/rando/: Context.h  Fill.cpp  Fill.h  GameShim.h  Generator.cpp  Generator.h  Graph.h  ItemNames.h  ItemTypes.h  Logic.cpp  Logic.h  LogicData.cpp  LogicData.h  LogicState.cpp  MetaData.h  RegionGraph.cpp  SceneIds.h  Search.cpp  Search.h  SeedFile.cpp  SeedFile.h  Session.cpp  Session.h  SettingsSpec.h  SettingsSpecData.h  gen_main.cpp  randomizerEnums.h
src/rando/_test/: diag_region.cpp  smoke_allsettings.cpp  smoke_area_access.cpp  smoke_bridge.cpp  smoke_bridge_trials.cpp  smoke_collectibles.cpp  smoke_cowfish.cpp  smoke_dot_closed_rewards.cpp  smoke_dungeon_items.cpp  smoke_dungeon_rewards.cpp  smoke_dungeonitems.cpp  smoke_enums.cpp  smoke_fill.cpp  smoke_foundation.cpp  smoke_graph.cpp  smoke_itemshuffle.cpp  smoke_keyrings.cpp  smoke_linkspocket.cpp  smoke_logic_settings.cpp  smoke_overrides.cpp  smoke_presets.cpp  smoke_scrubs.cpp  smoke_search.cpp  smoke_seedfile.cpp  smoke_session.cpp  smoke_shopsanity.cpp  smoke_startingage.cpp  smoke_tokensanity.cpp
src/rando/location_access/: root.cpp
src/rando/location_access/dungeons/: bottom_of_the_well.cpp  deku_tree.cpp  dodongos_cavern.cpp  fire_temple.cpp  forest_temple.cpp  ganons_castle.cpp  gerudo_training_ground.cpp  ice_cavern.cpp  jabujabus_belly.cpp  shadow_temple.cpp  spirit_temple.cpp  water_temple.cpp
src/rando/location_access/overworld/: castle_grounds.cpp  death_mountain_crater.cpp  death_mountain_trail.cpp  desert_colossus.cpp  gerudo_fortress.cpp  gerudo_valley.cpp  goron_city.cpp  graveyard.cpp  haunted_wasteland.cpp  hyrule_field.cpp  kakariko.cpp  kokiri_forest.cpp  lake_hylia.cpp  lon_lon_ranch.cpp  lost_woods.cpp  market.cpp  sacred_forest_meadow.cpp  temple_of_time.cpp  thieves_hideout.cpp  zoras_domain.cpp  zoras_fountain.cpp  zoras_river.cpp
